# Clay-Dupe

./: .dockerignore  .env.example  .gitignore  API_SPECS.md  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  SMOKE_TEST.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.claude/: gsd-file-manifest.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.streamlit/: config.toml
cli/: main.py
config/: settings.py
cost/: budget.py  cache.py  tracker.py
data/: database.py  email_engine.py  io.py  models.py  schema.sql  sync.py
enrichment/: ab_testing.py  classifier.py  company_enricher.py  contact_discovery.py  domain_finder.py  email_finder.py  icp_scorer.py  linkedin_finder.py  pattern_engine.py  router.py  waterfall.py
providers/: apollo.py  base.py  contactout.py  datagma.py  exceptions.py  findymail.py  http_pool.py  icypeas.py  salesforce.py  validators.py
quality/: anti_pattern.py  circuit_breaker.py  confidence.py  verification.py
tests/: conftest.py  test_auth_persistence.py  test_classifier.py  test_cli_integration.py  test_company_sourcing.py  test_concurrent_db.py  test_confidence.py  test_contact_discovery.py  test_database.py  test_e2e_pipeline.py  test_efficiency_overhaul.py  test_email_gen.py  test_icp_scoring.py  test_io.py  test_key_validation.py  test_malformed_responses.py  test_models.py  test_pattern_engine.py  test_providers.py  test_retry.py  test_salesforce.py  test_security_bugfixes.py  test_waterfall.py  test_waterfall_edge_cases.py
ui/: app.py  shared.py  styles.py  (+1 more)
(+142 files in other folders)
